fix swagger return types
